--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1000, 100, 2)\n",
-      "(100,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5py.File(\"data/lotka_volterra_data.h5\", \"r\") as f:\n",
     "    # Access the full dataset\n",
@@ -41,7 +32,8 @@
     "    time_points = f[\"time\"][:]\n",
     "\n",
     "print(np.shape(trajectories))\n",
-    "print(np.shape(time_points))"
+    "print(np.shape(time_points))\n",
+    "print(time_points)"
    ]
   },
   {
