使用 Colab 创建而成

--- a/lora.ipynb
+++ b/lora.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# This notebook is run on Colab GPU"
+      ],
+      "metadata": {
+        "id": "O3hXRU-MiqTv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/liuzhimei/M2_coursework.git\n",
@@ -29,6 +38,31 @@
             "Resolving deltas: 100% (29/29), done.\n",
             "/content/M2_coursework\n",
             "/content/M2_coursework\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi --gpu-reset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QXMWqmxXtShg",
+        "outputId": "28032f00-f97b-4cf3-aad3-1013990827a0"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU 00000000:00:04.0 is currently in use by another process.\n",
+            "\n",
+            "1 device is currently being used by one or more other processes (e.g., Fabric Manager, CUDA application, graphics application such as an X server, or a monitoring application such as another instance of nvidia-smi). Please first kill all processes using this device and all compute applications running in the system.\n"
           ]
         }
       ]
@@ -71,31 +105,6 @@
             "|=========================================================================================|\n",
             "|  No running processes found                                                             |\n",
             "+-----------------------------------------------------------------------------------------+\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!nvidia-smi --gpu-reset"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QXMWqmxXtShg",
-        "outputId": "28032f00-f97b-4cf3-aad3-1013990827a0"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "GPU 00000000:00:04.0 is currently in use by another process.\n",
-            "\n",
-            "1 device is currently being used by one or more other processes (e.g., Fabric Manager, CUDA application, graphics application such as an X server, or a monitoring application such as another instance of nvidia-smi). Please first kill all processes using this device and all compute applications running in the system.\n"
           ]
         }
       ]
