使用 Colab 创建而成

--- a/lora.ipynb
+++ b/lora.ipynb
@@ -776,6 +776,8 @@
         "\n",
         "    device = accelerator.device\n",
         "\n",
+        "    model.eval()\n",
+        "\n",
         "    for system_id in tqdm(range(6), desc=\"System\"):\n",
         "        prey = trajectories[system_id, :, 0] # a list of 100 points for population of prey\n",
         "        predator = trajectories[system_id, :, 1] # a list of 100 points for population of predator\n",
@@ -1295,8 +1297,7 @@
       "name": "python"
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "A100"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -3699,8 +3700,7 @@
           }
         }
       }
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
