--- a/lora.ipynb
+++ b/lora.ipynb
@@ -1209,7 +1209,7 @@
         "                    # next_token = output.logits[:, -1, :].argmax(dim=-1).unsqueeze(0)  # Get most likely next token\n",
         "\n",
         "                    # Define temperature for randomness (variability) to the autoregressive predictions\n",
-        "                    temperature = 1.0  # You can experiment with higher values (1.0) or lower (0.5) for more randomness\n",
+        "                    temperature = 1.0 \n",
         "                    logits = output.logits[:, -1, :] / temperature  # Adjust logits with temperature\n",
         "                    probs = torch.nn.functional.softmax(logits, dim=-1)\n",
         "                    next_token = torch.multinomial(probs, 1)  # Sample from the distribution\n",
@@ -1225,7 +1225,6 @@
         "            print(f\"generated text: {generated_text}\")\n",
         "\n",
         "            generated_series = decode_time_series(generated_text)  # Convert texts back to numerical series and truncate the series at 100 time step\n",
-        "            # print(f\"generated time series: {generated_series}\")\n",
         "\n",
         "            # Only add if the shape is correct and no NaNs are present\n",
         "            if generated_series is not None and generated_series.shape == (20, 2) and not np.isnan(generated_series).any():\n",
