--- a/flops.ipynb
+++ b/flops.ipynb
@@ -9,7 +9,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qwen2ForCausalLM(\n",
+      "  (model): Qwen2Model(\n",
+      "    (embed_tokens): Embedding(151936, 896)\n",
+      "    (layers): ModuleList(\n",
+      "      (0-23): 24 x Qwen2DecoderLayer(\n",
+      "        (self_attn): Qwen2Attention(\n",
+      "          (q_proj): Linear(in_features=896, out_features=896, bias=True)\n",
+      "          (k_proj): Linear(in_features=896, out_features=128, bias=True)\n",
+      "          (v_proj): Linear(in_features=896, out_features=128, bias=True)\n",
+      "          (o_proj): Linear(in_features=896, out_features=896, bias=False)\n",
+      "        )\n",
+      "        (mlp): Qwen2MLP(\n",
+      "          (gate_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
+      "          (up_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
+      "          (down_proj): Linear(in_features=4864, out_features=896, bias=False)\n",
+      "          (act_fn): SiLU()\n",
+      "        )\n",
+      "        (input_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
+      "        (post_attention_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
+      "      )\n",
+      "    )\n",
+      "    (norm): Qwen2RMSNorm((896,), eps=1e-06)\n",
+      "    (rotary_emb): Qwen2RotaryEmbedding()\n",
+      "  )\n",
+      "  (lm_head): Linear(in_features=896, out_features=151936, bias=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM\n",
+    "model_name = \"Qwen/Qwen2.5-0.5B-Instruct\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "\n",
+    "# Print model parameters\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +64,9 @@
     "num_layers = 24      # number of transformer layers\n",
     "seq_length = 512     # token input length\n",
     "D_model = 896        # hidden size\n",
-    "d_FFN = D_model * 4\n",
+    "d_FFN = 4864\n",
     "num_heads = 14\n",
-    "rank = 8"
+    "rank = 4"
    ]
   },
   {
@@ -31,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forward FLOPS: 1.03e+12\n"
+      "Total FLOPS: 1.29e+12\n"
      ]
     }
    ],
@@ -93,7 +140,7 @@
     "\n",
     "total_flops = calculate_flops(num_layers, seq_length, D_model, d_FFN, num_heads)\n",
     "\n",
-    "print(f\"Forward FLOPS: {total_flops:.2e}\")"
+    "print(f\"Total FLOPS: {total_flops:.2e}\")"
    ]
   },
   {
@@ -105,27 +152,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forward FLOPS with LoRA: 1.04e+12\n"
+      "Total FLOPS with LoRA for experiment 1: 2.62e+12\n",
+      "Total FLOPS with LoRA for experiment 2: 5.91e+12\n",
+      "Total FLOPS with LoRA for experiment 3: 1.12e+13\n"
      ]
     }
    ],
    "source": [
-    "def calculate_flops_with_lora(num_layers, seq_length, D_model, D_FFN, num_heads, rank):\n",
-    "    lora_flops = 3 * (4 * rank * num_layers * D_model**2) # forward + backward flops together\n",
+    "def calculate_flops_with_lora(num_layers, seq_length, D_model, D_FFN, num_heads, rank, num_steps):\n",
+    "    lora_flops = 3 * num_steps * (4 * rank * num_layers * D_model**2) # forward + backward flops together\n",
     "    total_flops = calculate_flops(num_layers, seq_length, D_model, D_FFN, num_heads)\n",
     "    total_flops_with_lora = lora_flops + total_flops\n",
     "    return total_flops_with_lora\n",
     "\n",
-    "total_flops_with_lora = calculate_flops_with_lora(num_layers, seq_length, D_model, d_FFN, num_heads, rank)\n",
+    "experiment_1 = calculate_flops_with_lora(num_layers=24, seq_length=128, D_model=896, D_FFN=4864, num_heads=14, rank=2, num_steps=5000)\n",
+    "experiment_2 = calculate_flops_with_lora(num_layers=24, seq_length=512, D_model=896, D_FFN=4864, num_heads=14, rank=4, num_steps=5000)\n",
+    "experiment_3 = calculate_flops_with_lora(num_layers=24, seq_length=768, D_model=896, D_FFN=4864, num_heads=14, rank=8, num_steps=5000)\n",
     "\n",
-    "print(f\"Forward FLOPS with LoRA: {total_flops_with_lora:.2e}\")"
+    "\n",
+    "print(f\"Total FLOPS with LoRA for experiment 1: {experiment_1:.2e}\")\n",
+    "print(f\"Total FLOPS with LoRA for experiment 2: {experiment_2:.2e}\")\n",
+    "print(f\"Total FLOPS with LoRA for experiment 3: {experiment_3:.2e}\")"
    ]
   }
  ],
