--- a/flops.ipynb
+++ b/flops.ipynb
@@ -152,24 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total FLOPS with LoRA for experiment 1: 2.62e+12\n",
-      "Total FLOPS with LoRA for experiment 2: 5.91e+12\n",
-      "Total FLOPS with LoRA for experiment 3: 1.12e+13\n"
+      "Total FLOPS with LoRA for experiment 1: 1.54e+15\n",
+      "Total FLOPS with LoRA for experiment 2: 6.45e+15\n",
+      "Total FLOPS with LoRA for experiment 3: 9.95e+15\n"
      ]
     }
    ],
    "source": [
     "def calculate_flops_with_lora(num_layers, seq_length, D_model, D_FFN, num_heads, rank, num_steps):\n",
-    "    lora_flops = 3 * num_steps * (4 * rank * num_layers * D_model**2) # forward + backward flops together\n",
+    "    lora_flops = 3 * (4 * rank * num_layers * D_model**2) # forward + backward flops together\n",
     "    total_flops = calculate_flops(num_layers, seq_length, D_model, D_FFN, num_heads)\n",
-    "    total_flops_with_lora = lora_flops + total_flops\n",
+    "    total_flops_with_lora = num_steps * (lora_flops + total_flops)\n",
     "    return total_flops_with_lora\n",
     "\n",
     "experiment_1 = calculate_flops_with_lora(num_layers=24, seq_length=128, D_model=896, D_FFN=4864, num_heads=14, rank=2, num_steps=5000)\n",
